[package]
name = "nodeless-rs"
version = "0.1.0"
edition = "2021"
exclude = ["integration_test"]

[workspace]
members = ["integration_test"]

[dependencies]
chrono = "0.4.24"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.40"
url = "2.3.1"

